fix letter-spacing on <cite>

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_block-quote.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_block-quote.scss
@@ -14,7 +14,7 @@ body .wp-block-quote,
 		line-height: 1.5;
 		color: $gray-700;
 		max-width: 95%;
-		letter-spacing: 0.02em;
+		letter-spacing: 0.04em;
 		@media (min-width: 500px) {
 			max-width: min(80%, 800px);
 		}
